--- a/Public/index.html
+++ b/Public/index.html
@@ -580,7 +580,11 @@ setInterval(async()=>{
 			 "20. α–ω Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/20. α–ω Dihalides.html",
 			 "21. Chemical Properties of Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/21. Chemical Properties of Dihalides.html",
 			"22. Tri-halides (Chloroform)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/22. Tri-halides (Chloroform).html",
-			 "23. Iodoform (CHI₃)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/23. iodoform (CHI₃).html"
+			 "23. Iodoform (CHI₃)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/23. iodoform (CHI₃).html",
+			  "24. Carbon tetrachloride, CCl4 Prepration": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/24. Carbon tetrachloride, CCl4 Prepration.html",
+			  "25. Physical properties, chemical properties, reactions, and uses of carbon tetrachloride": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/25. Physical properties, chemical properties, reactions, and uses of carbon tetrachloride.html",
+			  "26. Unsaturated halides (Halo-alkenes) Vinyl chloride (chloroethene)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/26. Unsaturated halides (Halo-alkenes) Vinyl chloride (chloroethene).html",
+			  "27. Allyl iodide or 3-iodopropene-1": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/27. Allyl iodide or 3-iodopropene-1.html"
 			 
 		  },
 		   "Chapter 7 - Coming Soon": {
