--- a/Public/index.html
+++ b/Public/index.html
@@ -584,7 +584,11 @@ setInterval(async()=>{
 			  "24. Carbon tetrachloride, CCl4 Prepration": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/24. Carbon tetrachloride, CCl4 Prepration.html",
 			  "25. Physical properties, chemical properties, reactions, and uses of carbon tetrachloride": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/25. Physical properties, chemical properties, reactions, and uses of carbon tetrachloride.html",
 			  "26. Unsaturated halides (Halo-alkenes) Vinyl chloride (chloroethene)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/26. Unsaturated halides (Halo-alkenes) Vinyl chloride (chloroethene).html",
-			  "27. Allyl iodide or 3-iodopropene-1": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/27. Allyl iodide or 3-iodopropene-1.html"
+			  "27. Allyl iodide or 3-iodopropene-1": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/27. Allyl iodide or 3-iodopropene-1.html",
+			  "28. Methods of preparation Halo Arenes": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/28. Methods of preparation Halo Arenes.html",
+			  "29. Chemical properties of  Halo-arenes": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/29. Chemical properties of  Halo-arenes.html",
+			  "30. SN Reactions Under Vigorous Conditions": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/30. SN Reactions Under Vigorous Conditions",
+			  "31. Electrophilic aromatic substitution": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/31. Electrophilic aromatic substitution"
 			 
 		  },
 		   "Chapter 7 - Coming Soon": {
